exports[`test getArtworkClasses returns default classes if short 1`] = `"one-whole overlay--gradient background--fill overlay-color--ff0000"`;

exports[`test getArtworkClasses returns ratio classes if not short 1`] = `"one-whole overlay--gradient background--fill overlay-color--ff0000 ratio--square"`;

exports[`test getArtworkContainerStyles returns styles object if short 1`] = `
Object {
  "backgroundImage": "
        url(\'http://test.com/1x1.blur.jpg\')
      ",
  "backgroundSize": "cover",
  "height": "100%",
  "paddingBottom": "10px",
  "paddingTop": "10px",
}
`;

exports[`test getArtworkStyles returns regular styles if not short 1`] = `
Object {
  "backgroundImage": "url(\'http://test.com/1x1.jpg\')",
}
`;

exports[`test getArtworkStyles short styles if short 1`] = `
Object {
  "backgroundColor": "transparent",
  "backgroundImage": "url(\'http://test.com/1x1.jpg\')",
  "backgroundSize": "contain",
  "height": "1px",
}
`;

exports[`test hackBackgroundStyles returns style object 1`] = `[Function]`;

exports[`test renders with props 1`] = `
<div style={{...}}>
<div className="overlay-color--ff0000" style={{...}} />
<style>

    .overlay-color--ff0000:after{
      background: linear-gradient(
        to bottom, rgba(255, 0, 0, 0) 0%, #ff0000 100%
      );
    }
  
</style>
<style>

    .overlay-color--ff0000 {
      background-color: #ff0000;
    }
  
</style>
<div className="player-flex_ucdycx player-container_1uu1wdg">
<section className="hard" style={{...}}>
<div className="one-whole overlay--gradient background--fill overlay-color--ff0000 ratio--square" style={{...}} />
</section>
<div className="text-center soft-sides player-flex-one_e0s8li">
<AudioTitle trackTitle={[undefined]} artistName="track artist" albumTitle="test album" isPlaying={false} isLight={false} channelName="music" />
<Connect(AudioControlsWithoutData) audio={{...}} isLight={false} />
</div>
</div>
</div>
`;

exports[`test renders without color 1`] = `
<div style={{...}}>
<div className="overlay-color--000" style={{...}} />
<style>

    .overlay-color--000:after{
      background: linear-gradient(
        to bottom, rgba(0, 0, 0, 0) 0%, #000 100%
      );
    }
  
</style>
<style>

    .overlay-color--000 {
      background-color: #000;
    }
  
</style>
<div className="player-flex_ucdycx player-container_1uu1wdg">
<section className="hard" style={{...}}>
<div className="one-whole overlay--gradient background--fill overlay-color--000 ratio--square" style={{...}} />
</section>
<div className="text-center soft-sides player-flex-one_e0s8li">
<AudioTitle trackTitle={[undefined]} artistName="track artist" albumTitle="test album" isPlaying={false} isLight={false} channelName="music" />
<Connect(AudioControlsWithoutData) audio={{...}} isLight={false} />
</div>
</div>
</div>
`;
